welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:28: error: ';' expected but 'else' found.
  else return false
  ^