welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  checkColonneComplet()
  return true
}


def checkColonneComplet():Boolean={
  
checkColonne()
recule(6)
droite()
avance()
gauche()
return (checkColonne())
}



def checkColonne():Boolean = {

for (i <- 1 to 6){
  avance()
  if (estSurBiscuit()){
    return true
  }
  
}
  else return false
}